--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy":"https://quicknotes-p7j0.onrender.com/", 
   "scripts": {
     "dev": "vite",
     "build": "vite build",
